<resources>
    <string name="app_name">Miyagi Conversionator 1000</string>
    <string name="recipe_image">Recipe</string>
    <string name="new_recipe">New Recipe</string>
    <string name="my_recipe">My Recipes</string>
    <string name="my_recipe_list">My Recipe List</string>
    <string name="add_recipe">Add New Recipe</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="temperature_to_cook">Temp</string>
    <string name="time_to_cook">Time Min.</string>
    <string name="recipe_quantity">Servings</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_notes">Notes</string>
    <string name="conversion_amount"></string>
    <string name="add_new_ingredient">Ingredients</string>
    <string name="save_recipe_button">Save</string>
    <string name="my_recipe_button">My Recipes</string>
    <string name="tempMeasurement">Temp Measurement</string>
    <string name="conversionBaseOn">Conversion based on:</string>
    <string name="fromSystem">From</string>
    <string name="toSystem">To</string>
    <string name="conv_ing">Conv by Ing</string>
    <string name="conv_quantity"></string>
    <string name="conv_measurement"></string>
    <string name="conv_temperature">Conv Temp</string>

    <string name="quantity">Quantity</string>
    <string name="picture">Picture</string>
    <string name="add_button">Add</string>
    <string name="delete_button">Delete</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="Delete">Delete</string>
    <string-array name="measurement">
        <item>select</item>
        <item>cups</item>
        <item>fluid ounces</item>
        <item>gallons</item>
        <item>grams</item>
        <item>kilograms</item>
        <item>liters</item>
        <item>milliliters</item>
        <item>ounces</item>
        <item>pints</item>
        <item>pounds</item>
        <item>quarts</item>
        <item>tablespoons</item>
        <item>teaspoons</item>
        <item>units</item>
    </string-array>

    <string-array name="measurement_system">
        <item>All</item>
        <item>Imperial</item>
        <item>Metric</item>
    </string-array>

    <string-array name="temp_measurement">
        <item>C</item>
        <item>F</item>
    </string-array>

    <string-array name="conversion">
        <item>Multiply by</item>
        <item>Divide by</item>
        <item>Servings</item>
        <item>One Ingredient</item>
    </string-array>

</resources>